force-app/main/default/objects/Incentive_Code_Detail__c/Incentive_Code_Detail__c.object-meta.xml
<CustomObject>
    <label>Incentive Code Detail</label>
    <nameField>
        <label>Incentive Code Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Code Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>