force-app/main/default/objects/Incentive_Code_Detail__c/fields/Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_Price__c</fullName>
    <label>Discount Price</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>