force-app/main/default/objects/Incentive_Code_Detail__c/fields/Incentive_Code__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Code__c</fullName>
    <label>Incentive Code</label>
    <referenceTo>Incentive_Code__c</referenceTo>
    <relationshipLabel>Incentive Code Details</relationshipLabel>
    <relationshipName>Incentive_Code_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>