force-app/main/default/objects/Incentive_Code_Detail__c/fields/Max_perc__c.field-meta.xml
<CustomField>
    <fullName>Max_perc__c</fullName>
    <label>Max %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>