force-app/main/default/objects/Incentive_Code_Detail__c/fields/Max_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Price__c</fullName>
    <label>Max Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>