force-app/main/default/objects/Incentive_Code_Detail__c/fields/Min_perc__c.field-meta.xml
<CustomField>
    <fullName>Min_perc__c</fullName>
    <label>Min %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>