force-app/main/default/objects/Incentive_Code_Detail__c/fields/Trait__c.field-meta.xml
<CustomField>
    <fullName>Trait__c</fullName>
    <label>Trait</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Technology</valueSetName>
    </valueSet>
</CustomField>